src/app/styles/normalize.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap");

* {
   box-sizing: border-box;
}

html {
   scroll-behavior: smooth;
}

body {
   overflow-y: scroll;
}

#left-drawer .ant-drawer-body {
   padding: 0;
}

.ant-spin.overlay {
   position: absolute;
   z-index: 9999;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.5);
}

.ant-badge {
   color: unset !important;
}

.ant-layout {
   background: #ffffff;
}

.ant-layout-content {
   min-height: calc(100vh - 64px - 70px - 40px);
   padding: 40px 10%;
}

.ant-steps-horizontal:not(.ant-steps-label-vertical) .ant-steps-item-description {
   max-width: 250px;
}

.ant-card-cover {
   background-color: var(--color-accent);
}

.ant-card-meta-title {
   white-space: unset;
}

.rc-virtual-list-scrollbar-thumb {
   background-color: #acb6c4 !important;
}

.ant-input-clear-icon {
   font-size: 20px;
}

.ant-layout-sider {
   background: transparent;
}

.ant-anchor,
.ant-anchor-link-title {
   font-size: inherit;
   color: inherit;
}

.ant-slider-mark-text {
   width: 50px;
}

::-webkit-scrollbar {
   width: 8px;
   height: 8px;
   background-color: transparent;
}

::-webkit-scrollbar-track {
   background-color: transparent;
   border-radius: 5px;
}

::-webkit-scrollbar-thumb {
   background-color: #acb6c4;
   border-radius: 5px;
}

::-webkit-scrollbar-corner {
   background-color: #ffffff;
}

[aria-label="checkboxes-group"] label {
   width: 100%;
}

.ant-btn-primary,
.ant-radio-button {
   background-color: var(--color-primary) !important;
   border-color: var(--color-primary) !important;
}
.ant-anchor-link-title {
   color: var(--color-anchor-gray) !important;
}
.ant-anchor-link-title-active {
   color: var(--color-primary) !important;
}
.dark-slick-dots .slick-dots.slick-dots-bottom {
   filter: invert(100%) opacity(50%);
}
.ant-steps-item-description {
   max-width: none !important;
}

.custom-steps .ant-steps-item-process .ant-steps-item-icon {
   background-color: var(--color-primary) !important;
   border-color: var(--color-primary) !important;
}

.ant-steps-icon svg {
   color: white !important;
}

.custom-steps .ant-steps-item-finish .ant-steps-item-icon {
   background-color: var(--color-primary) !important; /* Колір завершених кроків */
}

